--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,5 @@
 server {
-    listen       80;
-    server_name  *.hwx.site;
+    listen       10000 default_server;
 
     location / {
         root   /usr/share/nginx/html;
@@ -13,10 +12,10 @@ server {
     }
 
     location ~ \.php$ {
-        root           html;
-        fastcgi_pass   127.0.0.1:9000;
+        root   /usr/share/nginx/html;
+        fastcgi_pass   localhost:10001;
         fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include        fastcgi_params;
     }
 }
